# chat

./: .gitignore  CMakeLists.txt  README.md
include/: public.h
include/server/: charserver.h  chatservice.h
include/server/db/: db.h
include/server/model/: friendmodel.h  group.h  groupmodel.h  offlinemessage.h  offlinemessagemodel.h  user.h  usermodel.h
include/server/redis/: redis.h
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
